# rig

./: .gitignore  CHANGELOG.md  LICENSE  README.ja.md  README.md  action.yml  pyproject.toml  skills-lock.json
.claude-plugin/: marketplace.json  plugin.json
agents/: api-compat-reviewer.md  cognitive-economist-reviewer.md  design-reviewer.md  docs-reviewer.md  finding-verifier.md  lazy-senior-reviewer.md  migration-reviewer.md  observability-reviewer.md  performance-reviewer.md  security-reviewer.md  test-reviewer.md
benchmarks/: __init__.py
codex/: hooks.json
commands/: brainstorm.md  catalog.md  coin.md  design.md  dev.md  drill.md  duck.md  export.md  forge.md  go.md  goal.md  harness.md  import.md  init.md  knowledge.md  loop.md  magi.md  movie.md  orchestrate.md  party.md  persona.md  pr.md  pre-mortem.md  qa.md  queue.md  rig.md  roast.md  sage.md  sales.md  scenario.md  sec.md  setup.md  skill.md  slot.md  spd.md  talk.md  tasks.md  usage.md
cursor/: hooks.json
docs/: CHANGELOG-archive.md  GENAIE01_prompt_harness_loop_doc_v1_20260703.html  GENAIE01_prompt_harness_loop_doc_v2_20260703.html  RIGINTRO01_rig_introduction_slide_v1_20260703.html  RIGINTRO01_rig_introduction_slide_v2_20260703.html  RIGINTRO01_rig_introduction_slide_v3_20260703.html  architecture.md  testing-scenarios.md
hooks/: hooks.json  inject-instincts.sh  inject-talk-mode.sh  preserve-rig-state.sh  remind-rig-header.sh  suggest-instincts.sh
rig_workbench/: __init__.py  bench.py  bench_invariance.py  bench_providers.py  bench_score.py  bench_tasks.py  cli.py  githooks.py  sensor_bench.py
scripts/: ast_diff.py  dashboard.py  host_adapters.py  install.sh  mcp_server.py  notify.py  openapi_diff.py  orchestrate.py  prose_rhythm.py  rig-action-entrypoint.sh  rigsino.py  sast_adapter.py  validate.py  workbench.py
tests/: conftest.py  test_ab_experiment.py  test_adaptive_risk.py  test_adaptive_run.py  test_api_contracts.py  test_ast_diff.py  test_auto_route.py  test_bench.py  test_bench_invariance.py  test_bench_providers.py  test_bench_score.py  test_bench_tasks.py  test_cli_smoke.py  test_cockpit.py  test_codex_integration.py  test_confidence.py  test_convergence_budget.py  test_cost_metering.py  test_dejavu.py  (+42 more)
(+542 files in other folders)
