[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rig-workbench"
version = "1.10.1"
description = "rig — a quality-gated AI workbench that runs anywhere. Install as a pip package; drop into Claude Code / Codex / Cursor as a skill; recipe-driven workflow with force-proof accept, cross-LLM verifier, and isolated worktrees."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "itoshun" }
]
keywords = [
  "ai", "coding-agent", "orchestration", "harness",
  "claude-code", "codex", "workbench", "cross-llm",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "pyyaml>=6.0",                        # recipe frontmatter parsing (orchestrate.py, validate.py)
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "pytest>=7",
]

[project.urls]
Homepage = "https://github.com/itoh-shun/rig"
Repository = "https://github.com/itoh-shun/rig"
Changelog = "https://github.com/itoh-shun/rig/blob/master/CHANGELOG.md"

[project.scripts]
rig-wb = "rig_workbench.cli:main"       # pip installer 経由の CLI entrypoint

# ── パッケージ探索 ──────────────────────────────────────────────
# rig_workbench/ を Python パッケージとして拾う。scripts/*.py は
# 従来通り Claude Code plugin から呼ばれる場所に残す（bin/orchestrate
# shim も互換のため維持）。パッケージ側 cli.py が scripts/*.py の
# main() を importlib で薄く呼び出す。
[tool.setuptools.packages.find]
where = ["."]
include = ["rig_workbench*"]
exclude = ["tests*", "docs*", "video*", "web*"]

[tool.setuptools.package-data]
rig_workbench = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"
